Linter now happier :D